--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-<title>webstudio</title>
-    </head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+     <title>webstudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" />
+       <link rel="stylesheet" href=".css/styles.css" />
+</head>
 
 <body>
         <!-- PAGE HEDER -->
