--- a/index.html
+++ b/index.html
@@ -1,108 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>webstudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/styles.css" />
+  </head>
 
-<head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-     <title>webstudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
-       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" />
-       <link rel="stylesheet" href=".css/styles.css" />
-</head>
-
-<body>
-        <!-- PAGE HEDER -->
-    <header>
-        <nav>
-<a href="./index.html">WebStudio</a>
-<ul>
-<li>
-    <a href="./index.html">Studio</a>
-</li>
-<li>
-    <a href="">Portfolio</a>
-</li>
-<li>
-    <a href="">Contacts</a>
-
-</li>
-</ul>
-        </nav>
-        <address>
-            <ul>
-                <li> 
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        
-        </address>
-        
+  <body>
+    <!-- PAGE HEDER -->
+    <header class="page-header">
+      <nav class="main-nav">
+        <a class="logotype link" href="./index.html"><span class="span">Web</span>Studio</a>
+        <ul class="menu">
+          <li class="menu-item link">
+            <a class="menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a class="link-adress link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link-adress link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
-        <!-- HERO -->
-    <section>
+      <!-- HERO -->
+      <section class="main-section">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-    </section>
-    <!-- OUR BENEFITS -->
-    <section>
+      </section>
+      <!-- OUR BENEFITS -->
+      <section>
         <h2>OUR BENEFITS</h2>
         <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business
-                problem to walk away with the perfect and creative solution.</p>
-            </li>
-            <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </li>
-            <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </li>
-            <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </li>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
         </ul>
-    </section>
-    <!-- OUR TEAM -->
-    <section>
+      </section>
+      <!-- OUR TEAM -->
+      <section>
         <h2>Our Team</h2>
         <ul>
-            <li>
-                <img src="./images/mark_guerrero.jpg" alt="Product Designer" width="264" height="260">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/tom_ford.jpg" alt="Frontend Developer" width="264" height="260">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/camila_garsia.jpg" alt="Marketing" width="264" height="260">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/daniel_wilson.jpg" alt="UI Designer" width="264" height="260">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-            </li>
+          <li>
+            <img
+              src="./images/mark_guerrero.jpg"
+              alt="Product_Designer"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/tom_ford.jpg"
+              alt="Frontend_Developer"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/camila_garsia.jpg"
+              alt="Marketing"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/daniel_wilson.jpg"
+              alt="UI_Designer"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
-    </section>
-        </main>
-        <!-- PAGE FOOTER -->
+      </section>
+      <!--OUR PORTFOLIO-->
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/Banking_App.jpg"
+              alt="Banking_App"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/Cashless_Payment.jpg"
+              alt="Cashless_Payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Meditation_App.jpg"
+              alt="Meditaion_App"
+              width="360"
+              height="300"
+            />
+            <h3>Meditaion App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/Taxi_Service.jpg"
+              alt="Taxi_Service"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Screen_Illustrations.jpg"
+              alt="Screen_Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/Online_Courses.jpg"
+              alt="Online_Courses"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!-- PAGE FOOTER -->
     <footer>
-    <a href="./index.html">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <a class="logotype link" href="./index.html"><span class="span">Web</span>Studio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-</body>
-</html> 
+  </body>
+</html>
