--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- PAGE HEDER -->
     <header class="page-header">
       <nav class="main-nav">
-        <a class="logotype link" href="./index.html"><span class="span">Web</span>Studio</a>
+        <a class="logotype link" href="./index.html">web<span class="span">studio</span></a>
         <ul class="menu">
           <li class="menu-item link">
             <a class="menu-link link" href="./index.html">Studio</a>
@@ -43,49 +43,54 @@
         </ul>
       </address>
     </header>
+
+
     <main>
       <!-- HERO -->
       <section class="main-section">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-      </section>
+       </section>
+
+
       <!-- OUR BENEFITS -->
-      <section>
+      <section class="section-our-benefits">
         <h2>OUR BENEFITS</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="benefits-item">Strategy</h3>
+            <p class="benefits-detail">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="benefits-item">Punctuality</h3>
+            <p class="benefits-detail">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="benefits-item">Diligence</h3>
+            <p class="benefits-detail">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="benefits-item">Technologies</h3>
+            <p class="benefits-detail">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
+
       <!-- OUR TEAM -->
-      <section>
-        <h2>Our Team</h2>
+      <section class="section-our-team">
+        <h2 class="our-team">Our Team</h2>
         <ul>
           <li>
             <img
@@ -94,8 +99,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="names">Mark Guerrero</h3>
+            <p class="profession">Product Designer</p>
           </li>
           <li>
             <img
@@ -104,8 +109,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="names">Tom Ford</h3>
+            <p class="profession">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -114,8 +119,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="names">Camila Garcia</h3>
+            <p class="profession">Marketing</p>
           </li>
           <li>
             <img
@@ -124,14 +129,16 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="names">Daniel Wilson</h3>
+            <p class="profession">UI Designer</p>
           </li>
         </ul>
       </section>
+
+
       <!--OUR PORTFOLIO-->
-      <section>
-        <h2>Our Portfolio</h2>
+      <section class="section-our-portfolio">
+        <h2 class="our-portfolio">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -140,8 +147,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-items">Banking App</h3>
+            <p class="portfolio-spesiec">App</p>
           </li>
           <li>
             <img
@@ -150,8 +157,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-items">Cashless Payment</h3>
+            <p class="portfolio-spesiec">Marketing</p>
           </li>
           <li>
             <img
@@ -160,8 +167,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+            <h3 class="portfolio-items">Meditaion App</h3>
+            <p class="portfolio-spesiec">App</p>
           </li>
           <li>
             <img
@@ -170,8 +177,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-items">Taxi Service</h3>
+            <p class="portfolio-spesiec">Marketing</p>
           </li>
           <li>
             <img
@@ -180,8 +187,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-items">Screen Illustrations</h3>
+            <p class="portfolio-spesiec">Design</p>
           </li>
           <li>
             <img
@@ -190,16 +197,18 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-items">Online Courses</h3>
+            <p class="portfolio-spesiec">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
+
+
     <!-- PAGE FOOTER -->
-    <footer>
-    <a class="logotype link" href="./index.html"><span class="span">Web</span>Studio</a>
-      <p>
+    <footer class="section-footer">
+    <a class="logotype-footer link" href="./index.html">web<span class="span-footer">studio</span></a>
+      <p class="paragraf-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
