changes in html/css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
             <a class="link-adress link" href="mailto:info@devstudio.com"
@@ -48,14 +48,14 @@
     <main>
       <!-- HERO -->
       <section class="main-section">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="name-main-section">Effective Solutions for Your Business</h1>
+        <button class="button-order-service" type="button">Order Service</button>
        </section>
 
 
       <!-- OUR BENEFITS -->
       <section class="section-our-benefits">
-        <h2>OUR BENEFITS</h2>
+        <h2 class="our-benefits">OUR BENEFITS</h2>
         <ul>
           <li>
             <h3 class="benefits-item">Strategy</h3>
