--- a/index.html
+++ b/index.html
@@ -92,17 +92,18 @@
       <section class="section-our-team">
         <h2 class="our-team">Our Team</h2>
         <ul>
-          <li>
+          <li class="spesialist">
             <img
               src="./images/mark_guerrero.jpg"
               alt="Product_Designer"
               width="264"
               height="260"
+    
             />
             <h3 class="names">Mark Guerrero</h3>
             <p class="profession">Product Designer</p>
           </li>
-          <li>
+          <li class="spesialist">
             <img
               src="./images/tom_ford.jpg"
               alt="Frontend_Developer"
@@ -112,7 +113,7 @@
             <h3 class="names">Tom Ford</h3>
             <p class="profession">Frontend Developer</p>
           </li>
-          <li>
+          <li class="spesialist">
             <img
               src="./images/camila_garsia.jpg"
               alt="Marketing"
@@ -122,7 +123,7 @@
             <h3 class="names">Camila Garcia</h3>
             <p class="profession">Marketing</p>
           </li>
-          <li>
+          <li class="spesialist">
             <img
               src="./images/daniel_wilson.jpg"
               alt="UI_Designer"
@@ -140,7 +141,7 @@
       <section class="section-our-portfolio">
         <h2 class="our-portfolio">Our Portfolio</h2>
         <ul>
-          <li>
+          <li class="portfolio-place">
             <img
               src="./images/Banking_App.jpg"
               alt="Banking_App"
@@ -150,7 +151,7 @@
             <h3 class="portfolio-items">Banking App</h3>
             <p class="portfolio-spesiec">App</p>
           </li>
-          <li>
+          <li class="portfolio-place">
             <img
               src="./images/Cashless_Payment.jpg"
               alt="Cashless_Payment"
@@ -160,7 +161,7 @@
             <h3 class="portfolio-items">Cashless Payment</h3>
             <p class="portfolio-spesiec">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-place">
             <img
               src="./images/Meditation_App.jpg"
               alt="Meditaion_App"
@@ -170,7 +171,7 @@
             <h3 class="portfolio-items">Meditaion App</h3>
             <p class="portfolio-spesiec">App</p>
           </li>
-          <li>
+          <li class="portfolio-place">
             <img
               src="./images/Taxi_Service.jpg"
               alt="Taxi_Service"
@@ -180,7 +181,7 @@
             <h3 class="portfolio-items">Taxi Service</h3>
             <p class="portfolio-spesiec">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-place">
             <img
               src="./images/Screen_Illustrations.jpg"
               alt="Screen_Illustrations"
@@ -190,7 +191,7 @@
             <h3 class="portfolio-items">Screen Illustrations</h3>
             <p class="portfolio-spesiec">Design</p>
           </li>
-          <li>
+          <li class="portfolio-place">
             <img
               src="./images/Online_Courses.jpg"
               alt="Online_Courses"
