--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- PAGE HEDER -->
     <header class="page-header">
       <nav class="main-nav">
-        <a class="logotype link" href="./index.html">web<span class="span">studio</span></a>
+        <a class="logotype link" href="./index.html">Web<span class="span">Studio</span></a>
         <ul class="menu">
           <li class="menu-item link">
             <a class="menu-link link" href="./index.html">Studio</a>
@@ -168,7 +168,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-items">Meditaion App</h3>
+            <h3 class="portfolio-items">Meditation App</h3>
             <p class="portfolio-spesiec">App</p>
           </li>
           <li class="portfolio-place">
@@ -208,7 +208,7 @@
 
     <!-- PAGE FOOTER -->
     <footer class="section-footer">
-    <a class="logotype-footer link" href="./index.html">web<span class="span-footer">studio</span></a>
+    <a class="logotype-footer link" href="./index.html">Web<span class="span-footer">Studio</span></a>
       <p class="paragraf-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
